# skyplot

./: Documentation.html  GHRSS_survey_plot.ipynb  LICENSE  Makefile  README.md  functions.py  main.py  main_survey_plots.py  setup.cfg  utility.py
Documentaion/ghrss/: config.html  functions.html  utility.html
data/: Fermi directed MSPs discovered by GMRT.csv  GHRSS observed sources.list  GHRSS1_all_sourceid.list  GHRSS2_all_sourceid.list  new.csv  phase1.csv  phase2.csv
ghrss/: config.py  functions.py  utility.py
src/skyplot/: __init__.py  core.py
src/skyplot/data/: Fermi.list  GHRSS.list  GHRSS.list.obsvd  PhaseI.list  PhaseII.list
survey_area/: shade_area.py
