[metadata]
name = skyplot
version = 0.1.0
license = MIT License
license_file = LICENSE
author = "Ujjwal Panda"
author_email = "ujjwalpanda97@gmail.com"
url = "https://github.com/GHRSS/skyplot"
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md, CONTRIBUTING.md
description = "Plot the sky coverage and discoveries of the GHRSS survey."

project_urls =
    Source Code = "https://github.com/GHRSS/skyplot"
    Bug Reports = "https://github.com/GHRSS/skyplot/issues"
    Documentation = "https://skyplot.readthedocs.io/en/latest"

classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Astronomy

keywords =
    frbs
    rrats
    pulsars
    surveys
    skyplots
    astronomy
    astrophysics
    radio astronomy

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires = numpy
include_package_data = True

package_dir = 
    =src

[options.packages.find]
where=src
